--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -82,5 +82,6 @@
 <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
 <script src="{% static 'js/angular-sanitize.min.js' %}"></script>
 <script src="{% static 'js/app.homepage.js' %}"></script>
+<script src="{% static 'css/homepage.css' %}"></script>
 
 {% endblock %}
