--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -45,7 +45,7 @@
           </ul>
         </li>
         <li class="header_element">
-          <a href="/" > Blogs</a>
+          <a href="/blogs" > Blogs</a>
         </li>
         <li style="margin-left:30px;">
           <button type="button" class="btn btn-warning" style="background-color:#ff6900;margin-top:10px;" ng-click="schedule()">
