--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -111,14 +111,17 @@
 
 .btn-primary {
   background: white;
-  color: #080738;
-  border: solid 1px #0773ab;
+  color: #0085ca;
+  border: solid 2px #0085ca;
+  width: 100%;
+  max-width: 200px;
+  padding: .8em 2.5em;
 }
 
 .btn-primary:hover {
-  background: #0773ab;
+  background: #0085ca;
   color: #fff;
-  border: solid 1px #0773ab;
+  border: solid 2px #0085ca;
 }
 
 .btn-warning {
@@ -127,7 +130,11 @@
 }
 
 .btn-warning:hover {
-  background-color: #ff6900;
+  background: #ff6900;
+  color: #fff;
+  border: solid 1px #ff6900;
+  transform: scale(1.075) translateZ(0);
+  transition: transform .2s cubic-bezier(.25, 1.6, .6, 1.4)
 }
 
 .point-green {
@@ -195,6 +202,7 @@ blockquote>p {
   font: 400 16px/1.5 NBI Pro Regular, Helvetica Neue, Helvetica, Open Sans, Arial, sans-serif;
   text-align: left;
   font-weight: strong;
+  margin-bottom: 20px;
 }
 
 .content h3 {
@@ -212,12 +220,15 @@ blockquote>p {
   text-transform: uppercase;
   background: #0037ff;
   color: #fff;
+  width: 100%;
+  max-width: 200px;
+  padding: .8em 2.5em;
 }
 
 .btn-rounded:hover {
-  background: #0066ff;
+  background: #0037ff;
   color: #fff;
-  border: solid 1px #0066ff;
+  border: solid 1px #0037ff;
 }
 
 .text-uppercase {
@@ -235,14 +246,14 @@ blockquote>p {
 
 .stat-circleo {
   z-index: 2;
-  content: "";
+  /* content: ""; */
   display: inline-block;
   width: 440px;
   height: 440px;
   background-color: #fff;
   border-radius: 100%;
   border: 50px solid #080738;
-  position: absolute;
+  /* position: absolute; */
 }
 
 .stat-circles {
@@ -254,7 +265,7 @@ blockquote>p {
   background-color: #36d4ff;
   border-radius: 100%;
   border: 0px solid #36d4ff;
-  position: absolute;
+  /* position: absolute; */
 }
 
 .stat-circlet {
@@ -265,58 +276,49 @@ blockquote>p {
   height: 330px;
   border-radius: 100%;
   border: 18px solid #7500ff;
-  position: absolute;
+  /* position: absolute; */
 }
 
 figure {
   font-weight: bold;
 }
 
-.cardimg {
-  background-image: linear-gradient(rgba(11, 29, 92, 0.82), rgba(18, 24, 97, 0.6)), url("/static/images/background4.jpg");
+.articleImg {
+  background-image: linear-gradient(rgba(11, 29, 92, 0.65), rgba(18, 24, 97, 0.52)), url("/static/images/background4.jpg");
   background-size: cover;
-  background-position: top;
-  min-width: 90px;
-  /* opacity:0.4; */
-  min-height: 90px;
-  border-radius: 5px;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  border-radius: 4px;
+  margin-left: 8px;
   margin-bottom: 10px;
+  padding: 25px;
 }
 
 .blogimg {
   background-image: linear-gradient(rgba(11, 29, 92, 0.82), rgba(18, 24, 97, 0.6)), url("/static/images/register.jpg");
   width: 100%;
-  /* opacity:0.4; */
   min-height: 400px;
   border-top-left-radius: 7px;
 }
 
-.blogimg>p {
-  position: absolute;
-  left: 30px;
-  top: 40%;
+#date {
+  padding-top: 200px;
+  padding-left: 30px;
 }
 
-.blogimg>span {
-  position: absolute;
-  left: 30px;
-  top: 50%;
+#sideArticle {
+  padding-top: 18px;
 }
 
-.above-footer {
-  background: url('/static/images/footer-bg.jpg')center center;
-  color: white;
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
-.gobtn {
+.big-xl {
   width: 100%;
   max-width: 400px;
   background: #ff6900;
-
+  padding: .8em 2.5em;
 }
-.gobtn:hover{
+
+.big-xl:hover {
   background: #ff6900;
   color: #fff;
   border: solid 1px #ff6900;
@@ -324,15 +326,64 @@ figure {
   transition: transform .2s cubic-bezier(.25, 1.6, .6, 1.4)
 }
 
-
-@media screen and (min-width: 30px) and (max-width:400px) {
-  #stroke {
-    display: none;
-  }
-
-  /* hide it elsewhere */
+.item {
+  min-height: 380px;
+  padding: 30px;
+  border: 0px solid blue;
+  background-color: #fff;
+  margin: 20px;
 }
+
+.Title {
+  color: #002855;
+  font-size: 28px;
+  width: calc(100% - 88px);
+  font-weight: 600;
+}
+
+.Desc {
+  font-size: 16px;
+  font-weight: 500;
+  color: #002855;
+  line-height: 1.6;
+}
+
+.bigbtn {
+  width: 100%;
+  max-width: 200px;
+  padding: .8em 2.5em;
+  color: #fff;
+}
+
+
+.list{
+  background-color: white;
+  padding: 15px 10px;
+  display: inline-block;
+  margin: 10px;
+  font-size: 22px;
+  font-weight: 600;
+  box-shadow: 0px 1px 4px rgba(26, 24, 20, 0.2);
+}
+
+.heading{
+  color: rgb(255, 84, 10);
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.para{
+  color:white;
+  font-size: 20px;
+  font-weight: 600;
+}
+
 
 /* @media screen and  (min-width: 30px) and (max-width: 1024px) {
     #container { display: flex; flex-flow: column-reverse; }
 } */
+@media screen and (min-width: 600px) and (max-width:1024px) {
+  #stroke {
+    display: none;
+  }
+}
