--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -9,8 +9,39 @@
 </div>
 
 {% verbatim %}
-<div class="marketing col-md-12 ">
-  <div class="col-md-5 col-sm-12 text-center" style="margin-top:10%;margin-bottom:10%">
+<div class="row text-center" style="margin:0px;padding-left:20px;">
+  <span class="scroll-point point-1"></span>
+  <span class="point-text" style="">Ideate</span>
+</div>
+
+<!-- <div class="row"style="margin:0px;">
+<div class="col-md-5 text-center" style="padding:20px;">
+  <span class="row text-center">
+    <h3>True digital innovation starts with your employees and teams</h3>
+    <span>They’re the people most passionate about your brand, campaigns and products.
+      Enable their every idea for a true culture of innovation. Capture,
+      govern and manage digital innovation across the enterprise. Dramatically improve the ROI of
+      campaigns, landing pages, checkouts and overall conversion.</span>
+  </span>
+  <div class="row">
+    <a href="" class="btn btn-primary btn-rounded">Learn More</a>
+  </div>
+</div>
+<div class="col-md-2 text-center">
+  <div class=""style="padding-left:220px;">
+    <div class="row noPadding stroke" style="border: 1px solid #65647c;height:200px;width:0px;" id="stroke"></div>
+  </div>
+  <div class="row noPadding curve" style="margin-left: -7px;" id="stroke">
+    <img src="/static/images/Stroke.svg" alt="">
+  </div>
+  <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;" id="stroke"></div>
+</div>
+<div class="col-md-5">
+
+</div>
+</div> -->
+<!-- <div class="marketing row" style="margin:0px;">
+  <div class="col-md-5 text-center" style="">
     <div class="content">
       <h3>True digital innovation starts with your employees and teams</h3>
       <p>They’re the people most passionate about your brand, campaigns and products.
@@ -19,20 +50,19 @@
         campaigns, landing pages, checkouts and overall conversion.</p>
       <a href="/products/program-management/" class="btn btn-primary btn-rounded">Learn More</a>
     </div>
-  </div>
-  <div class="col-sm-1" style="width:76px;">
-    <span class="point-text" style="margin-left:50px;">Ideate</span>
-    <div class="scroll-point point-1" style="margin-top:-22px;"></div>
+  </div> -->
+<!-- <div class="col-md-1 text-center" style="">
+
+
     <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;" id="stroke"></div>
     <div class="row noPadding curve" style="margin-left: -7px;" id="stroke">
       <img src="/static/images/Stroke.svg" alt="">
     </div>
     <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;" id="stroke"></div>
-    <div class="scroll-point point-2" style="margin-top:22px;"></div>
-    <span class="point-text" style="margin-left:50px;margin-top:50px;">Experiment</span>
-  </div>
-  <div class="col-md-6 col-sm-12">
-    <ul class="list-unstyled">
+
+
+  </div> -->
+<!-- <ul class="list-unstyled">
       <li>
         <div class="col-md-12 col-sm-12" style="margin-top:40px;" id="container">
           <div class="col-md-2 col-sm-2" style="margin-top:25px;">
@@ -82,60 +112,158 @@
           </div>
         </div>
       </li>
-    </ul>
+    </ul> -->
 
-  </div>
+
+<!-- <div class="" style="margin:20px;">
+
+</div> -->
+<div class="row text-center" style="margin:0px;padding-left:55px;">
+  <span class="scroll-point point-3"></span>
+  <span class="point-text" style="">Experiment</span>
 </div>
-</div>
-<div class="col-md-12">
-  <div class="col-md-5 col-sm-12 text-center">
-    <ul class="list-inline">
-      <li>
-        <div class="stat-circleo row" style="color:#080738;">
-          <div class="text-center" style="height:100%;padding-top:40px;">
-            <figure style="font-size: 70px; margin: 15px;">
-              $21M
-            </figure>
+<!-- <div class="container-fluid" style="margin:20px">
+  <div class="row">
+    <div class="col-md-5 text-center">
+      <div class="row" style="">
+        <div class="stat-circleo " style="color:#080738;">
+          <div class="text-center">
+            <figure style="font-size: 70px;">$21M</figure>
             <span>Incremental Revenue Impact</span><br>
             <a href="#">Learn how HP did it</a>
           </div>
         </div>
-      </li>
-      <li>
-        <div class="stat-circles row" style="color:#ffff;margin-top:45%;margin-left:-17%;">
+      </div>
+      <div class="row" style="margin-top:-40px;position: inherit;">
+        <div class="stat-circles" style="color:#ffff;">
           <div class="text-center" style="height:100%;width:100%;padding-top:85px;">
             <figure style="font-size:60px;">+300%</figure>
             <span> <b>Click-through uplift</b> </span><br>
             <a href="#" style="font-size:13px;font-weight: 500;color:#ffff;">Read the Missguided case study</a>
           </div>
         </div>
-      </li>
-      <li>
-        <div class="stat-circlet row" style="color:#080738;margin-top:70%">
+      </div>
+      <div class="row" style="margin-top:-60px;margin-left:50px;">
+        <div class="stat-circlet" style="color:#080738;">
           <div class="text-center" style="height:100%; padding-top:30px;">
             <figure style="font-size: 70px;margin-top:30px;">-80%</figure>
             <span>Decrease in return rate</span><br>
             <a href="#">Read the Brooks case study</a>
           </div>
         </div>
-      </li>
-    </ul>
-  </div>
-  <div class="col-md-1 col-sm-12" style="width:76px;margin-top:-80px;">
-    <div class="row noPadding" style="margin-left: -2px;" id="stroke">
+      </div>
+    </div>
+    <div class="col-md-2 text-center" id="stroke">
       <img src="https://images.ctfassets.net/zw48pl1isxmc/32U70oRSM8MWEWcEEyg6uS/2fd45782ccbbdd906e2f07d73ff8618e/curvy-2.svg" width:"100%"alt="">
     </div>
-    <div class="scroll-point point-3" style="margin-left:29px;margin-top:22px;"></div>
-    <span class="point-text" style="margin-left:70px;">Repeat</span>
-  </div>
-  <div class="col-md-6 col-sm-12" style="margin-top:30px;">
-    <div class="text-center" style="margin-left:150px;">
-      <div class="content">
+    <div class="col-md-5 text-center" style="padding:20px;">
+      <div class="row text-center content">
         <h3>Let the data determine your baseline, your winning ideas and the losers</h3>
-        <p>Know the future impact of new offers, copy, CTA’s, performance improvements and more.
+        <span>Know the future impact of new offers, copy, CTA’s, performance improvements and more.
           Armed with the accuracy of Stats Engine, never again guess at which offers will work and which won’t.
-          Just try them all. Accelerate campaign throughput while massively improving marketing ROI. </p>
+          Just try them all. Accelerate campaign throughput while massively improving marketing ROI.</span>
+      </div>
+      <div class="row">
         <a href="/products/program-management/" class="btn btn-primary btn-rounded">Learn More</a>
+      </div>
+    </div>
+  </div>
+</div> -->
+<div class="row text-center" style="margin:0px;padding-left:25px;">
+  <span class="scroll-point point-3"></span>
+  <span class="point-text" style="">Repeat</span>
+</div>
+<div class="row" style="margin:20px;">
+  <div class="col-md-8 col-md-offset-2 shaddowed noPadding" style="min-height:550px;border-radius:10px;">
+    <div class="col-md-6 noPadding">
+      <div class="blogimg">
+        <div id="date">
+          <span style="font-size:24px;font-weight:500;color:#fff;">27 November 2018</span><br><br>
+          <span style="font-size:34px;font-weight:700;color:#fff">RPA Adoption: Top-down or Bottom-up?</span>
+        </div>
+      </div>
+      <div style="padding:20px;">
+        <p style="color:#002855;font-size: 15px;line-height: 1.7;">It has been a fascinating journey so far to watch
+          the adoption of RPA technology among client organizations.
+          We have observed several different paths to adoption while everyone
+          is still wondering if there is one template for the best
+          approach.</p>
+        <button type="button" style="background-color:#ff6900;border:none;" class="btn btn-warning bigbtn" name=""><b>Read Article</b> </button>
+      </div>
+    </div>
+    <div class="col-md-6" style="background-color:rgba(245,248,250,.5);margin-top:10px;">
+      <div class="row" ng-repeat="i in articles" style="margin-bottom:20px;{{$odd ? 'background:#fff;':''}};">
+        <div class="col-md-2 articleImg">
+          <div class="text-center" style="">
+            <span style="font-size:1.875em;color:#fff;"> <strong>21</strong></span><br>
+            <span style="font-size:0.875em;color:#fff;">Nov</span>
+          </div>
+        </div>
+        <div class="col-md-10">
+          <div id="articleHead">
+            <span style="font-size:1.2em;font-weight:700;color:#09075c"> RPA technology among client organizations cool text here. Great yeaa...</span><br>
+            <span class="text-primary"><strong>Read More...</strong></span>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="btn btn-primary">See More Articles</button>
+    </div>
+  </div>
+</div>
+<div class="row" style="background-color:#fff;margin:0px;">
+  <div class="col-md-8 col-md-offset-2">
+    <div class="row">
+      <div class="col-md-4">
+        <div style="  min-height: 380px;padding: 30px;border: 0px solid blue;margin: 20px;">
+          <h3 style="font-size:36px;color:#002855;font-weight:600;"> <br> <span>Why you’ll love the EpsilonAI Enterprise RPA Platform</span></h3>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class=" item">
+          <div>
+            <img src="/static/images/ecosystem.svg" width="70px" alt="Open Platform">
+          </div>
+          <h3 class="Title">Open Platform</h3>
+          <p class="Desc"><span>Our open and extensible platform features hundreds of built-in, customizable, shareable activities, and deep integrations with ERP, BPM and AI technologies.</span></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="item">
+          <div>
+            <img src="/static/images/fast-roi.svg" alt="Rapid Results">
+          </div>
+          <h3 class="Title">Rapid Results</h3>
+          <p class="Desc"><span>Tested and proven to deliver 40%+ faster automation design and deployment than competitors, UiPath offers worldwide implementation support, certified training.</span></p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="item">
+          <div>
+            <img src="/static/images/ai-enabled.svg" alt="Path to AI">
+          </div>
+          <h3 class="Title">Path to AI</h3>
+          <p class="Desc"><span style="">Built-in intelligent OCR, integrated NLP services from Google, Watson and Microsoft, and deep learning to reduce maintenance.</span></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="item">
+          <div>
+            <img src="/static/images/flexibility.svg" alt="Scalability">
+          </div>
+          <h3 class="Title">Scalability</h3>
+          <p class="Desc"><span>Deploy RPA at enterprise scale. Manage any variety and any number of processes from front to back-office regardless of complexity.</span></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="item">
+          <div>
+            <img src="/static/images/security.svg" width="70px" alt="Security">
+          </div>
+          <h3 class="Title">Security</h3>
+          <p class="Desc"><span>Defense-grade security and auditing includes RBAC, encryption everywhere, and Veracode certified Code. Our technology is trusted as secure by 40+ agencies.</span></p>
+        </div>
       </div>
     </div>
   </div>
@@ -155,44 +283,7 @@
     </div>
   </div>
 </div>
-<div class="row" style="margin:0px;margin-bottom:20px;">
-  <div class="col-md-8 col-md-offset-2 shaddowed noPadding" style="min-height:550px;border-radius:10px;">
-    <div class="col-md-6 noPadding">
-      <div class="noPadding blogimg">
-        <p style="font-size:24px;font-weight:500;color:#fff;">27 November 2018</p><br><br>
-        <span style="font-size:34px;font-weight:700;color:#fff">RPA Adoption: Top-down or Bottom-up?</span>
-      </div>
-      <div style="padding:20px;">
-        <p style="color:#002855;font-size: 15px;line-height: 1.7;">It has been a fascinating journey so far to watch
-          the adoption of RPA technology among client organizations.
-          We have observed several different paths to adoption while everyone
-          is still wondering if there is one template for the best
-          approach.</p>
-        <button type="button" style="background-color:#ff6900;border:none;" class="btn btn-success" name="">Read Article</button>
-      </div>
-    </div>
-    <div class="col-md-6" style="min-height:550px;padding:15px;background-color:rgba(245,248,250,.5);">
-      <div class="row" ng-repeat="i in articles" style="{{$odd ? 'background:#fff;':''}}">
-        <div class="col-sm-2">
-          <div class="cardimg text-center">
-            <span><br></span>
-            <span class="cardtext" style="font-size:30px;color:#fff;"> <strong>21</strong> </span>
-            <p class="cardtext" style="font-size:14px;color:#fff;line-height:3pt;">Nov</p>
-          </div>
-        </div>
-        <div class="col-sm-10">
-          <h4> <strong style="color:#080738">RPA technology among client organizations cool text here. Great yeaa..</strong> </h4>
-          <p class="text-primary">
-            <strong>Read More...</strong>
-          </p>
-        </div>
-      </div>
-      <br>
-      <button type="button" class="btn btn-primary">See More Articles</button>
-    </div>
-  </div>
-</div>
-<div class="row" style="margin:0px;padding:20px;background: url('/static/images/footer-bg-v1.png') ;color:white;">
+<div class="row" style="margin:0px;padding:20px;background: url('/static/images/footer-bg-v1.png');color:white;">
   <div class="col-md-5 text-right">
     <h4>Get Regular Blog Updates</h4>
   </div>
@@ -205,96 +296,14 @@
     </div>
   </div>
 </div>
-
-<div class="row" style="min-height:100vh;">
-  <div id="" class="" style="">
-    <section class="Benefits">
-
-  <div class="Benefits-items">
-
-    <h2 class="Benefits-title"><span>Why you’ll love the UiPath Enterprise RPA Platform</span></h2>
-
-
-    <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
-      <div class="Benefits-itemHeader">
-        <figure class="Benefits-itemIcon">
-
-          <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/ecosystem.svg" alt="Open Platform">
-
-        </figure>
-      </div>
-      <h3 class="Benefits-itemTitle">Open Platform</h3>
-      <p class="Benefits-itemDesc"><span>Our open and extensible platform features hundreds of built-in, customizable, shareable activities, and deep integrations with ERP, BPM and AI technologies.</span></p>
-    </div>
-
-    <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
-      <div class="Benefits-itemHeader">
-        <figure class="Benefits-itemIcon">
-
-          <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/fast-roi.svg" alt="Rapid Results">
-
-        </figure>
-      </div>
-      <h3 class="Benefits-itemTitle">Rapid Results</h3>
-      <p class="Benefits-itemDesc"><span>Tested and proven to deliver 40%+ faster automation design and deployment than competitors, UiPath offers worldwide implementation support, certified training, and a vast network of partner integrators.</span></p>
-    </div>
-
-    <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
-      <div class="Benefits-itemHeader">
-        <figure class="Benefits-itemIcon">
-
-          <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/ai-enabled.svg" alt="Path to AI">
-
-        </figure>
-      </div>
-      <h3 class="Benefits-itemTitle">Path to AI</h3>
-      <p class="Benefits-itemDesc"><span style="font-weight: 400;">Built-in intelligent OCR, integrated NLP services from Google, Watson and Microsoft, and deep learning to reduce maintenance.</span></p>
-    </div>
-
-    <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
-      <div class="Benefits-itemHeader">
-        <figure class="Benefits-itemIcon">
-
-          <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/flexibility.svg" alt="Scalability">
-
-        </figure>
-      </div>
-      <h3 class="Benefits-itemTitle">Scalability</h3>
-      <p class="Benefits-itemDesc"><span style="font-weight: 400;">Deploy RPA at enterprise scale. Manage any variety and any number of processes from front to back-office regardless of complexity.</span></p>
-    </div>
-
-    <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
-      <div class="Benefits-itemHeader">
-        <figure class="Benefits-itemIcon">
-
-          <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/security.svg" alt="Security">
-
-        </figure>
-      </div>
-      <h3 class="Benefits-itemTitle">Security</h3>
-      <p class="Benefits-itemDesc"><span style="font-weight: 400;">Defense-grade security and auditing includes RBAC, encryption everywhere, and Veracode certified Code. Our technology is trusted as secure by 40+ government agencies.</span></p>
-    </div>
-
-
-  </div>
-
-</section>
-</div>
-</div>
-
-<div class="row above-footer text-center noPadding"style="height:50vh;position:relative">
-  <div class=""style="position:absolute;top:30%;left:40%">
-    <div class="row">
-      <h1> <strong>Ready to take the lead?</strong></h1>
-    </div>
-    <div class="row">
-    <p>Choose open, extensible, secure automations</p>
-    </div>
-    <button type="button" class="btn btn-lg text-center gobtn" style="margin-top:10px;">
+<div class="row" style="margin:0px;background: url('/static/images/footer-bg.jpg');background-repeat: no-repeat;background-size: cover;">
+  <div class="col-md-8 col-md-offset-2 text-center" style="color:#fff;padding:130px 0px;">
+    <h1> <strong>Ready to take the lead?</strong></h1> <br>
+    <h4>Choose open, extensible, secure automations</h4> <br>
+    <button type="button" class="btn btn-lg text-center big-xl" style="margin-top:10px;">
       <strong>Get Started with Go!</strong>
     </button>
   </div>
-
 </div>
 
 {% endverbatim %}
