--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -355,8 +355,7 @@ figure {
   color: #fff;
 }
 
-
-.list{
+.list {
   background-color: white;
   padding: 15px 10px;
   display: inline-block;
@@ -364,26 +363,62 @@ figure {
   font-size: 22px;
   font-weight: 600;
   box-shadow: 0px 1px 4px rgba(26, 24, 20, 0.2);
+  text-decoration: none !important;
+  color: rgb(1, 9, 50);
 }
 
-.heading{
+.heading {
   color: rgb(255, 84, 10);
   font-size: 40px;
-  font-weight: 700;
-}
-
-.para{
-  color:white;
-  font-size: 20px;
   font-weight: 600;
+  margin-left: 35px;
+  padding-top: 20px;
+  font-family: sans-serif;
 }
 
+.para {
+  color: white;
+  font-size: 20px;
+  font-weight: 550;
+  margin-left: 35px;
+  padding-top: 10px;
+  font-family: sans-serif;
+  display: inline-flex;
+}
 
-/* @media screen and  (min-width: 30px) and (max-width: 1024px) {
-    #container { display: flex; flex-flow: column-reverse; }
-} */
+.detailRight {
+  width: 500px;
+  height: 60vh;
+  border: 1px solid rgba(0, 40, 85, .5);
+  border-radius: 5px;
+  padding: 20px 50px 0px 50px;
+  text-align: left;
+  letter-spacing: -1px;
+  word-spacing: 3px;
+}
+
+.detailLeft {
+  background: url('/static/images/stories-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 550px;
+  height: 60vh;
+  padding: 30px;
+}
+
 @media screen and (min-width: 600px) and (max-width:1024px) {
   #stroke {
     display: none;
+  }
+}
+
+@media (min-width:600px) and (max-width:1024px){
+  .detailRight {
+    width: 100%;
+    border: 0px solid black;
+  }
+  .detailLeft{
+    width: 100%;
   }
 }
