--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -1,10 +1,10 @@
 <footer style="padding:20px;background-color:#080738;color:white;">
   <div style="padding-left:10%;padding-right:10%">
     <div class="row" style="margin-bottom:20px;">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-6">
           <h1><i class="fa fa-contao " aria-hidden="true"></i>IOC</h1>
         </div>
-        <div class="col-md-3 footer">
+        <div class="col-md-3 col-sm-6 footer">
           <ul class="list-unstyled">
             <h4 class="text-muted">Services</h4>
             <li><a href="#">UIPath Implimentation</a></li>
@@ -14,7 +14,7 @@
             <li><a href="#">UIPath Training</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer">
+        <div class="col-md-3 col-sm-6 footer">
           <ul class="list-unstyled">
             <h4 class="text-muted">Solutions</h4>
             <li><a href="#">By Industry</a></li>
@@ -23,7 +23,7 @@
             <li><a href="#">Blogs</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer">
+        <div class="col-md-3 col-sm-6 footer">
           <ul class="list-unstyled">
             <h4 class="text-muted"> About US</h4>
             <li><a href="#">About US</a></li>
