--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -37,7 +37,7 @@
         <li class="header_element">
           <a href="/" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true"> Solutions </a>
           <ul ng-mouseleave="keepshow[2]=false" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
-          <li><a href="#">By Industry</a></li>
+          <li><a href="/industry">By Industry</a></li>
           <li><a href="#">By Technology</a></li>
           <li><a href="#">Webinars</a></li>
           </ul>
@@ -45,7 +45,7 @@
         <li class="header_element">
           <a href="/" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true"> Company</a>
             <ul ng-mouseleave="keepshow[3]=false" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
-          <li><a href="#">About US</a></li>
+          <li><a href="/about">About US</a></li>
           <li><a href="#">Investors</a></li>
           <li><a href="#">Careers</a></li>
           <li><a href="#">Contact US</a></li>
