--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -267,7 +267,7 @@
       <script src="{% static '' %}js/module.{{m.name}}.js"></script>
     {% endfor %}
 
-    <script src="https://app.syrow.com/script/chatter-E7eMhL9EbxtJnkeVtYjc58kmuwleT0Zu+WQEzsQCr6E=.js"></script>
+    <!-- <script src="https://app.syrow.com/script/chatter-E7eMhL9EbxtJnkeVtYjc58kmuwleT0Zu+WQEzsQCr6E=.js"></script> -->
 
 
 
