--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -157,8 +157,8 @@
 </div>
 
 
-<div class="blog_section shaddowed" style="min-height:600px; border-radius:10px;">
-  <div class="col-md-6 col-sm-12" style="padding-left:0px;">
+<div class="blog_section shaddowed" style="min-height:560px; border-radius:10px;">
+  <div class="col-md-6 col-sm-12" style="padding:0px;">
     <div class="blogimg">
       <div id="date">
         <span style="font-size:24px;font-weight:500;color:#fff;">27 November 2018</span><br><br>
@@ -171,15 +171,15 @@
       <button type="button" style="background-color:#ff6900;border:none;" class="btn btn-warning bigbtn" name=""><b>Read Article</b> </button>
     </div>
   </div>
-  <div class="col-md-6  col-sm-12" style="background-color:rgba(245,248,250,.5);margin-top:10px;">
-    <div class="row" ng-repeat="i in articles" style="margin-bottom:20px; padding-left:10px;{{$odd ? 'background:#fff;':''}};">
+  <div class="col-md-6  col-sm-12" style="background-color:rgba(245,248,250,.5);padding:0px;padding-top:10px;">
+    <div class="row" ng-repeat="i in articles" style="margin:0px;margin-bottom:20px; padding-left:10px;{{$odd ? 'background:#fff;':''}};">
       <div class="col-xs-2 articleImg">
         <div class="text-center" style="">
           <span style="font-size:1.875em;color:#fff;"> <strong>21</strong></span><br>
           <span style="font-size:0.875em;color:#fff;">Nov</span>
         </div>
       </div>
-      <div class="col-xs-9">
+      <div class="col-xs-10">
         <div id="articleHead">
           <span style="font-size:1.2em;font-weight:700;color:#09075c"> RPA technology among client organizations cool text here. Great yeaa...</span><br>
           <span class="text-primary"><strong>Read More...</strong></span>
