--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -173,13 +173,13 @@
   </div>
   <div class="col-md-6  col-sm-12" style="background-color:rgba(245,248,250,.5);padding:0px;padding-top:10px;">
     <div class="row" ng-repeat="i in articles" style="margin:0px;margin-bottom:20px; padding-left:10px;{{$odd ? 'background:#fff;':''}};">
-      <div class="col-xs-2 articleImg">
+      <div class="col-xs-4 articleImg col-md-2">
         <div class="text-center" style="">
           <span style="font-size:1.875em;color:#fff;"> <strong>21</strong></span><br>
           <span style="font-size:0.875em;color:#fff;">Nov</span>
         </div>
       </div>
-      <div class="col-xs-10">
+      <div class="col-xs-8 col-md-10" style="min-width:83%;padding-right:2px;">
         <div id="articleHead">
           <span style="font-size:1.2em;font-weight:700;color:#09075c"> RPA technology among client organizations cool text here. Great yeaa...</span><br>
           <span class="text-primary"><strong>Read More...</strong></span>
