--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -5,8 +5,8 @@
     <!-- Brand and toggle get grouped for better mobile display -->
       {% verbatim %}
     <div class="navbar-header">
-      <a class="navbar-brand" href="/" style="color:rgb(0, 133, 202);padding:0px;font-size:40px;padding-top:15px;">Epsilon<span style="color:black;">AI</span>  </a>
-      <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" ng-click="toggleNavbar = !toggleNavbar">
+      <a class="navbar-brand" href="/" style="color:rgb(0, 133, 202);padding:0px;font-size:30px;padding-top:15px;">Epsilon<span style="color:black;">AI</span>  </a>
+      <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" ng-click="toggleNavbar = !toggleNavbar" style="border:none;">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
