--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -26,11 +26,10 @@
   padding-right: 15px;
 }
 
-.blogHeading {
+.genericHeading {
   text-align: center;
   color: #452d54;
   font-weight: bold;
-  margin: 25px;
 }
 
 .blog_container {
@@ -85,7 +84,8 @@
   color: #fff;
   font-size: 20px;
   font-weight: bold;
-  background-color: rgba(0, 0, 0, 0.4);
+  /* background-color: rgba(0, 0, 0, 0.4); */
+  text-shadow: 0 0 20px #000,0 0 20px #000,0 0 20px #000,0 0 20px #090909,0 0 20px #090909,0 0 20px #000,0 0 20px #0f0f0f,0 0 20px #000;
 }
 
 .sec2Left {
@@ -228,6 +228,34 @@
     height: 25vh;
   } */
 
+  .slotBox{
+    min-height: 320px !important;
+  }
+
+  .calenderDiv {
+    padding-left: 0px !important;
+  }
+
+  .calendarBox {
+    min-height: 300px !important;
+  }
+
+  .calendarBox img {
+    left: 36% !important;
+  }
+
+  .scheduleDatePic td {
+    padding: 0px !important;
+  }
+
+  .scheduleDatePic td button {
+    border: 0px !important;
+  }
+
+  .scheduleDatePic tH button {
+    border: 0px !important;
+  }
+
   .blogUpdates{
     border-left:0 !important;
     border-top: 1px solid #aaa;
@@ -274,7 +302,7 @@
     width: 200px;
     height: 200px;
     top: 225px;
-    right: -20px;
+    right: 0px;
     z-index: 4;
   }
 
@@ -336,10 +364,10 @@
     font-size: 12px !important;
   }
   .flex_section {
-    margin: 10px 30px !important;
+    margin: 10px 15px !important;
   }
   .blog_section {
-    margin: 10px 30px !important;
+    margin: 10px 15px !important;
   }
 
   .personInfo {
@@ -388,6 +416,23 @@
   cursor: pointer;
   color: #452d54;
   margin: 0 15px;
+}
+
+.calendarBox{
+  background-color:#131C3C;
+  min-height:430px;
+  color:white;
+  padding:15px;
+}
+
+.calendarBox > img {
+  border:solid 3px white;
+  border-radius:40px;
+  height:80px;
+  width:80px;
+  position:absolute;
+  top:-10px;
+  left:195px;
 }
 
 .scheduleDatePic td {
