--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="hidden-md hidden-lg">
-  <div class="row " style=" background:url('/static/images/mainBanner.{{LANGUAGE_CODE}}.jpg') no-repeat right bottom;height:20vh;margin:0px;background-size: auto 100%;margin-top:40px;">
+  <div class="row " style=" background:url('/static/images/mainBanner.{{LANGUAGE_CODE}}.jpg') no-repeat ;height:20vh;margin:0px;background-size: cover;margin-top:40px;">
   </div>
   <div class="row" style="margin:0px; background-color:#0f4b8d;">
     <h3 style="color:white; text-align:center; padding:15px 0px">{% trans 'WelcomeHeading' %} </h3>
