corrected mobile view and responsive

--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -48,7 +48,7 @@
           <li><a href="/about">About US</a></li>
           <li><a href="#">Investors</a></li>
           <li><a href="/career">Careers</a></li>
-          <li><a href="#">Contact US</a></li>
+          <li><a href="/conatact_us">Contact US</a></li>
           </ul>
         </li>
         <li class="header_element" ng-click="toggleNavbar = false">
