--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -85,7 +85,7 @@
   font-size: 20px;
   font-weight: bold;
   /* background-color: rgba(0, 0, 0, 0.4); */
-  text-shadow: 0 0 20px #000,0 0 20px #000,0 0 20px #000,0 0 20px #090909,0 0 20px #090909,0 0 20px #000,0 0 20px #0f0f0f,0 0 20px #000;
+  text-shadow: 0 0 20px #000, 0 0 20px #000, 0 0 20px #000, 0 0 20px #090909, 0 0 20px #090909, 0 0 20px #000, 0 0 20px #0f0f0f, 0 0 20px #000;
 }
 
 .sec2Left {
@@ -139,14 +139,14 @@
 }
 
 .content_box {
-  flex:45%;
-  order:3;
+  flex: 45%;
+  order: 3;
   margin-top: 100px;
 }
 
-.circleDiv{
-   flex:45%;
-   order:1;
+.circleDiv {
+  flex: 45%;
+  order: 1;
 }
 
 .circles {
@@ -202,11 +202,38 @@
   0% {
     transform: translateY(40px);
   }
+
   100% {
     transform: translateY(0px);
   }
 }
 
+.detailRight {
+  width: 500px;
+  height: 60vh;
+  border: 1px solid rgba(0, 40, 85, .5);
+  border-radius: 5px;
+  padding: 20px 50px 0px 50px;
+  text-align: left;
+  letter-spacing: -1px;
+  word-spacing: 3px;
+}
+
+.detailLeft {
+  background: url('/static/images/stories-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 550px;
+  height: 60vh;
+  padding: 10px;
+}
+
+#bpoDesc {
+  padding: 40px;
+  color: #022750;
+  font-family: sans-serif;
+}
 
 @media only screen and (min-width:1500px) {
   .flex_section {
@@ -216,10 +243,27 @@
   .blog_section {
     margin: 100px 200px 100px 200px !important;
   }
+  .enterpriseimg{
+    display: none;
+  }
 }
 
-
 @media only screen and (max-width:768px) {
+  .detailRight {
+    width: 100%;
+    border: 0px solid black;
+  }
+
+  .detailLeft {
+    width: 100%;
+  }
+
+  #bpoDesc {
+    padding: 10px;
+  }
+
+  
+
   /* .blog_container, .sec1Right, .sec2Left, .sec2thirdRow{
     flex-direction: column;
     width: 100%;
@@ -227,8 +271,7 @@
   /* .flex_50Perc, .sec1Right, .sec1RightBox1,.sec2Left,.sec2Right, .sec1RightBox2, .flex_33Perc, .flex_67Perc , .flex_100Perc, .flex_25Perc{
     height: 25vh;
   } */
-
-  .slotBox{
+  .slotBox {
     min-height: 320px !important;
   }
 
@@ -256,29 +299,29 @@
     border: 0px !important;
   }
 
-  .blogUpdates{
-    border-left:0 !important;
+  .blogUpdates {
+    border-left: 0 !important;
     border-top: 1px solid #aaa;
   }
 
-  .blogContent{
-    margin:80px 10px 0px 10px !important;
+  .blogContent {
+    margin: 80px 10px 0px 10px !important;
   }
 
-  .selectLang{
+  .selectLang {
     position: absolute !important;
     box-shadow: 1px 1px 8px 0 rgba(8, 19, 31, .25) !important;
     top: -130px !important;
   }
+
   .content_box {
     flex: 70%;
     margin-top: 600px
   }
 
-  .circleDiv{
+  .circleDiv {
     flex: 70%;
   }
-
 
   .circles li:nth-child(1) {
     border: 20px solid #080738;
@@ -287,15 +330,15 @@
   }
 
   .circles li:nth-child(1) div {
-    padding-left:15px !important;
+    padding-left: 15px !important;
   }
 
   .circles li:nth-child(2) div {
-    padding-left:20px !important;
+    padding-left: 20px !important;
   }
 
   .circles li:nth-child(3) div {
-    padding-left:35px !important;
+    padding-left: 35px !important;
   }
 
   .circles li:nth-child(2) {
@@ -314,38 +357,46 @@
     z-index: 1;
   }
 
-
   .blog_container, .sec2Left {
     flex-direction: column;
   }
+
   .flex_50Perc {
     height: 25vh;
   }
+
   .blog_text {
     font-size: 15px !important;
   }
+
   .socialIcons div {
     font-size: 20px !important;
   }
+
   .textHeading>h4 {
     font-size: 16px !important;
   }
+
   .container_box {
     font-size: 12px !important;
     top: 10px !important;
     left: 130px !important;
     width: 100% !important;
   }
+
   .container_box>li {
     padding: 6px !important;
   }
+
   .content>div {
     text-align: center;
   }
+
   .dp {
     width: 60px !important;
     padding: 5px !important;
   }
+
   .point-green {
     position: absolute !important;
     top: 75px !important;
@@ -357,12 +408,15 @@
   blockquote>h6 {
     font-size: 12px !important;
   }
+
   blockquote>p {
     font-size: 12px !important;
   }
+
   .flex_section {
     margin: 10px 15px !important;
   }
+
   .blog_section {
     margin: 10px 15px !important;
   }
@@ -370,10 +424,12 @@
   .personInfo {
     padding-left: 0px !important;
   }
+
   .personInfo li {
     padding: 0px !important;
     margin-bottom: 10px !important;
   }
+
   .lineSvg {
     display: none;
   }
@@ -415,21 +471,21 @@
   margin: 0 15px;
 }
 
-.calendarBox{
-  background-color:#131C3C;
-  min-height:430px;
-  color:white;
-  padding:15px;
+.calendarBox {
+  background-color: #131C3C;
+  min-height: 430px;
+  color: white;
+  padding: 15px;
 }
 
-.calendarBox > img {
-  border:solid 3px white;
-  border-radius:40px;
-  height:80px;
-  width:80px;
-  position:absolute;
-  top:-10px;
-  left:195px;
+.calendarBox>img {
+  border: solid 3px white;
+  border-radius: 40px;
+  height: 80px;
+  width: 80px;
+  position: absolute;
+  top: -10px;
+  left: 195px;
 }
 
 .scheduleDatePic td {
@@ -447,7 +503,6 @@
   color: #fff;
   border: 1px solid #131C3C
 }
-
 
 .textHeading>h4 {
   width: 100%;
@@ -482,15 +537,12 @@
 
 /* .social > ul {
 } */
-
 /* .header_nav > li> a:hover{
   border-bottom: 2px solid red;
 
 } */
-
 .toggleBtn span {
   background-color: #e0e0e0;
-  
 }
 
 .barRotate1 {
@@ -829,27 +881,6 @@ figure {
   display: inline-flex;
 }
 
-.detailRight {
-  width: 500px;
-  height: 60vh;
-  border: 1px solid rgba(0, 40, 85, .5);
-  border-radius: 5px;
-  padding: 20px 50px 0px 50px;
-  text-align: left;
-  letter-spacing: -1px;
-  word-spacing: 3px;
-}
-
-.detailLeft {
-  background: url('/static/images/stories-bg.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 550px;
-  height: 60vh;
-  padding: 30px;
-}
-
 .personInfo {
   flex: 45%;
   padding-left: 20px;
@@ -879,22 +910,12 @@ figure {
   margin: 100px 120px 100px 120px;
 }
 
-.blogContent{
-  margin:80px 100px 0px 100px;
+.blogContent {
+  margin: 80px 100px 0px 100px;
 }
 
-.blogUpdates{
-  margin-top:30px;
-  border-left:1px solid #aaa;
-  min-height:450px;
-}
-
-@media (min-width:600px) and (max-width:1024px){
-  .detailRight {
-    width: 100%;
-    border: 0px solid black;
-  }
-  .detailLeft{
-    width: 100%;
-  }
+.blogUpdates {
+  margin-top: 30px;
+  border-left: 1px solid #aaa;
+  min-height: 450px;
 }
