--- a/homepage/templates/blog.html
+++ b/homepage/templates/blog.html
@@ -26,7 +26,8 @@
 <link rel="icon" href="/static/images/tutor.ico" type="image/gif" sizes="16x16">
 {% endblock %} {% block specific_css %}
 <link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
+<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8">
+ {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
 <!-- Header -->
 {% block content %}
 <div>
