--- a/homepage/templates/newssection.html
+++ b/homepage/templates/newssection.html
@@ -2,7 +2,8 @@
 <title>{{brandName}}</title>
 {% endblock %} {% block specific_css %}
 <link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %}
+<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8">
+ {% endblock %} {% block header %}
 
 {% include "header.html" %}
 
