--- a/homepage/templates/blogdetails.html
+++ b/homepage/templates/blogdetails.html
@@ -33,7 +33,8 @@
 
 {% endblock %} {% block specific_css %}
 <link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %}
+<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8">
+ {% endblock %} {% block header %}
 
 {% include "header.html" %}
 
