--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -189,7 +189,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.4.9/angular-sanitize.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.min.js"></script>
       <script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.min.jgz"></script>
-      <script src="https://cdn.jsdelivr.net/angularjs/1.4.7/angular-animate.min.js"></script>
+      <!-- <script src="https://cdn.jsdelivr.net/angularjs/1.4.7/angular-animate.min.js"></script> -->
       <script src="https://cdn.jsdelivr.net/momentjs/2.11.1/moment.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-slider/6.4.0/rzslider.min.js"></script>
     {% else %}
@@ -199,7 +199,7 @@
       <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
       <script src="{% static 'js/angular-sanitize.min.js' %}"></script>
       <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
-      <script src="{% static 'js/angular-animate.min.js' %}"></script>
+      <!-- <script src="{% static 'js/angular-animate.min.js' %}"></script> -->
       <script src="{% static 'js/autobahn.min.js' %}"></script>
       <script src="{% static 'js/moment.js' %}"></script>
       <script src="{% static 'js/rzslider.min.js' %}"></script>
@@ -208,7 +208,7 @@
     <script src="{% static 'js/datetimepicker.js' %}"></script>
     <script src="{% static 'js/angular-flash.js' %}"></script>
     <script src="{% static 'js/ng-tags-input.min.js' %}"></script>
-    <script src="{% static 'js/anim-in-out.js' %}"></script>
+    <!-- <script src="{% static 'js/anim-in-out.js' %}"></script> -->
     <script src="{% static 'js/angular-bootstrap-confirm.min.js' %}"></script>
     <!-- Custom JS files -->
     <script type="text/javascript">
