--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -37,6 +37,7 @@
 <script src="{% static 'js/app.homepage.js' %}"></script>
 <script src="{% static 'js/datetimepicker.js' %}"></script>
 <script src="{% static 'js/angular-flash.js' %}"></script>
+<script src="{% static 'js/custom/filters.js' %}"></script>
 
 
 {% endblock %}
