--- a/homepage/templates/abc.html
+++ b/homepage/templates/abc.html
@@ -127,7 +127,7 @@
               <img src="/static/images/fast-roi.svg" alt="Rapid Results">
             </div>
             <h3 class="Title">Rapid Results</h3>
-            <p class="Desc"><span>Tested and proven to deliver 40%+ faster automation design and deployment than competitors, UiPath offers worldwide implementation support, certified training.</span></p>
+            <p class="Desc"><span>Tested and proven to deliver 40%+ faster automation design and deployment than competitors, EpsilonAI offers worldwide implementation support, certified training.</span></p>
           </div>
         </div>
       </div>
