--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -7,11 +7,11 @@
         <div class="col-md-3 col-sm-6 footer">
           <ul class="list-unstyled">
             <h4 class="text-muted">Services</h4>
-            <li><a href="#">UIPath Implimentation</a></li>
+            <li><a href="#">EpsilonAI Implimentation</a></li>
             <li><a href="#">Automation Anywhere Implimentation</a></li>
             <li><a href="#">Remote technical assistance</a></li>
             <li><a href="#">Custom ML models</a></li>
-            <li><a href="#">UIPath Training</a></li>
+            <li><a href="#">EpsilonAI Training</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6 footer">
