added new pages and query for iphone

--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -8,9 +8,9 @@
           <ul class="list-unstyled">
             <h4 class="text-muted">Services</h4>
             <li><a href="#">EpsilonAI Implimentation</a></li>
-            <li><a href="#">Automation Anywhere Implimentation</a></li>
+            <!-- <li><a href="#">Automation Anywhere Implimentation</a></li> -->
             <li><a href="#">Remote technical assistance</a></li>
-            <li><a href="#">Custom ML models</a></li>
+            <!-- <li><a href="#">Custom ML models</a></li> -->
             <li><a href="#">EpsilonAI Training</a></li>
           </ul>
         </div>
