--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -30,10 +30,10 @@
         <li class="header_element">
           <a href="" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true"> Services</a>
           <ul ng-mouseleave="keepshow[1]=false" ng-click="keepshow[1] = false; toggleNavbar = false;" ng-mouseover="keepshow[1]=true" ng-show="show[1]||keepshow[1]" class="container_box" style="width:300px;">
-            <li><a href="#">UIPath Implimentation</a></li>
-            <li><a href="#">Automation Anywhere Implimentation</a></li>
+            <li><a href="/impliment">UIPath Implimentation</a></li>
+            <!-- <li><a href="#">Automation Anywhere Implimentation</a></li> -->
             <li><a href="/remote">Remote technical assistance</a></li>
-            <li><a href="#">Custom ML models</a></li>
+            <!-- <li><a href="#">Custom ML models</a></li> -->
             <li><a href="/training">EpsilonAI Training</a></li>
           </ul>
         </li>
