--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -138,10 +138,10 @@
   background-color: #000;
 }
 
-.blogDetailsTitle{
-  font-size:40px;
-  color:white;
-  margin:30px 0px;
+.blogDetailsTitle {
+  font-size: 40px;
+  color: white;
+  margin: 30px 0px;
 }
 
 .content_box {
@@ -356,7 +356,7 @@
 .bgrnd {
   background-image: linear-gradient(to right, rgba(5, 20, 43, 0.85), rgba(5, 20, 43, 0.14)), url('/static/images/hero1.png');
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   min-height: 500px;
   background-position: center;
 }
@@ -372,10 +372,73 @@
   padding: .8em 2.5em;
   font-size: 16px;
 }
-.redbtn:hover{
+
+.redbtn:hover {
   background-color: #f66464;
   color: #fff;
   border: 1px solid #f45858;
+}
+
+.min_padding {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.impliment_header {
+  margin: 0px;
+  background-image: url('/static/images/blue_waves.jpg');
+  color: #fff;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 350px;
+}
+
+.connect_bg {
+  background-image: url('/static/images/connect-2018.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-color: #1a1a1f;
+  min-height: 250px;
+  padding: 40px;
+}
+
+.neonbtn {
+  color: #111010;
+  background-color: #aef711;
+  border-radius: 2px;
+  z-index: 100;
+  border: 1px solid #aef711;
+  max-width: 200px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.neonbtn:hover {
+  color: #111010;
+  background-color: #8df432;
+  border: 1px solid #8df432;
+}
+
+.min_size {
+  font-size: 16px;
+  min-height: 250px;
+}
+
+.explore_text {
+  text-align: left;
+  color: #fff;
+  padding: 20px;
+}
+
+@media only screen and (device-width : 414px) and (device-height : 736px) and (-webkit-device-pixel-ratio : 3) {
+  .personInfo {
+    padding-left: 0px !important;
+    margin: 30px !important;
+  }
+  .circles {
+    right: 10px;
+  }
+
 }
 
 @media only screen and (min-width:1500px) {
@@ -406,7 +469,7 @@
     padding: 10px;
   }
 
-  .blogDetailsTitle{
+  .blogDetailsTitle {
     font-size: 25px;
     margin: 0px;
   }
@@ -455,6 +518,29 @@
     display: none;
   }
 
+  .min_padding {
+    width: 50%;
+  }
+
+  .impliment_header {
+    background-size: 100% 100%;
+  }
+
+  .connect_bg {
+    background-image: none;
+    background-color: #1a1a1f;
+    padding: 20px 15px;
+  }
+
+  .min_size {
+    min-height: auto;
+    padding: 10px 0px;
+  }
+
+  .explore_text {
+    text-align: center;
+  }
+
   /* .blog_container, .sec1Right, .sec2Left, .sec2thirdRow{
     flex-direction: column;
     width: 100%;
@@ -478,7 +564,7 @@
 
   .calendarBox img {
     left: 36% !important;
-    top:-40px !important;
+    top: -40px !important;
   }
 
   .scheduleDatePic td {
@@ -551,15 +637,14 @@
     z-index: 1;
   }
 
-
   .blog_container, .sec2Left, .sec1Right {
     flex-direction: column !important;
     -webkit-flex-direction: column !important;
   }
 
-  .sec1RightBox2, .sec1RightBox1{
+  .sec1RightBox2, .sec1RightBox1 {
     width: 100% !important;
-    flex:none;
+    flex: none;
   }
 
   .blog_text {
@@ -740,7 +825,6 @@
 } */
 .toggleBtn span {
   background-color: #e0e0e0;
-
 }
 
 .barRotate1 {
@@ -911,7 +995,6 @@ blockquote>p {
   color: #fff;
 }
 
-
 .connectingDots {
   margin: 0px;
   padding: 0px;
@@ -930,11 +1013,11 @@ blockquote>p {
   padding-top: 10px;
 }
 
-.connectingDots li:first-child{
+.connectingDots li:first-child {
   margin-right: 112px;
 }
 
-.connectingDots li span{
+.connectingDots li span {
   text-align: center;
   position: absolute;
   left: -5px;
@@ -944,7 +1027,7 @@ blockquote>p {
   color: #000;
 }
 
-.connectingDots li::before{
+.connectingDots li::before {
   content: '';
   position: absolute;
   top: 18px;
@@ -963,11 +1046,11 @@ blockquote>p {
   background: #1f8efb;
 }
 
-.connectingDots .till ~ li {
+.connectingDots .till~li {
   background: lightblue;
 }
 
-.connectingDots .till ~ li::before {
+.connectingDots .till~li::before {
   background: lightblue;
 }
 
@@ -977,7 +1060,7 @@ blockquote>p {
   color: #0037ff;
 }
 
-.btn-submit{
+.btn-submit {
   border-radius: 4px;
   border: 2px solid #1c299d;
   background: #fff;
@@ -986,7 +1069,7 @@ blockquote>p {
   margin-top: 25px;
 }
 
-.btn-submit:hover{
+.btn-submit:hover {
   background: #1c299d;
   border: 2px solid #1c299d;
   color: #fff;
@@ -1118,7 +1201,7 @@ figure {
 
 .bigbtn {
   width: 100%;
-  max-width: 200px;
+  max-width: 220px;
   padding: .8em 2.5em;
   color: #fff;
   font-size: 16px;
